<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item        
        android:id="@+id/syncApp"
        android:showAsAction="collapseActionView"
        android:title="@string/actionbar_settings_menu_item_sync"/>
    
<!--     <item android:id="@+id/action" -->
<!--        android:showAsAction="always" -->
<!--        android:title="Action"> -->
<!--         <menu> -->
<!--     <item -->
<!--         android:id="@+id/actionbar_add_po1" -->
<!--         android:showAsAction="collapseActionView" -->
<!--         android:title="@string/actionbar_add_po"/> -->
<!--     <item android:id="@+id/logout1" -->
<!--         android:showAsAction="collapseActionView" -->
<!--         android:title="@string/logout" -->
<!--         /> -->
            
<!--             </menu> -->
<!--             </item> -->
    <item
        android:id="@+id/actionbar_add_po"
        android:showAsAction="always"
        android:icon="@drawable/ic_add"
        android:title="@string/actionbar_add_po"/>
    
    <item android:id="@+id/logout"
        android:showAsAction="never"
        android:title="@string/logout"
        />
    

</menu>