<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View By" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/rdgViewBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rdbPONumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rdb_viewby_po_no"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/rdbProductName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rdb_viewby_product_name"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/rdbPOEdtEta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rdb_viewby_po_edt_eda"
                    android:textSize="13sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical" >

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TableLayout
                    android:id="@+id/table_po_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:weightSum="1"
                    android:stretchColumns="*" >

                    <TableRow
                        android:id="@+id/trPODetailsHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/app_dark"
                        android:layout_weight="1"
                        android:weightSum="4" >

                        <TextView
                            android:id="@+id/tvProductName"
                            android:layout_column="1"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/label_po_no"
                            android:textColor="@color/text_white" />

                        <TextView
                            android:id="@+id/tvETA"
                            android:layout_column="2"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/label_po_product_name"
                            android:textColor="@color/text_white" />

                        <TextView
                            android:id="@+id/tvQty"
                            android:layout_column="3"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/label_po_quantity"
                            android:textColor="@color/text_white" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tr_po_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/app_light" >

                        <TextView
                            android:id="@+id/TextView2"
                            android:layout_column="1"
                            android:layout_weight="1"
                            android:text="111" />

                        <TextView
                            android:id="@+id/TextView3"
                            android:layout_weight="2"
                            android:layout_column="2"
                            android:text="name of the product" />

                        <TextView
                            android:id="@+id/TextView4"
                            android:layout_weight="1"
                            android:layout_column="3"
                            android:gravity="center"
                            android:text="1" />
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="3"
            android:gravity="right"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/table_po_details_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/trPODetailsHeaderAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/app_dark" >

                    <TextView
                        android:id="@+id/textView51"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:text="@string/btn_edit"
                        android:textColor="@color/text_white" />

                    <TextView
                        android:id="@+id/textView52"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:text="@string/btn_delete"
                        android:textColor="@color/text_white" />
                </TableRow>

                <TableRow
                    android:id="@+id/tr_po_details1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/app_light" >

                    <ImageView
                        android:id="@+id/btnEdit"
                        android:layout_width="@dimen/table_row_icon"
                        android:layout_height="@dimen/table_row_icon"
                        android:layout_column="1"
                        android:src="@drawable/ic_edit_doc"
                        android:text="@string/btn_edit" />

                    <ImageView
                        android:id="@+id/btnDelete"
                        android:layout_width="@dimen/table_row_icon"
                        android:layout_height="@dimen/table_row_icon"
                        android:layout_column="2"
                        android:src="@drawable/ic_delete"
                        android:text="@string/btn_delete" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>